Fix horizontal scrollbar in wide-layout.css

--- a/content/css/wide-layout.css
+++ b/content/css/wide-layout.css
@@ -10,5 +10,6 @@
 
   #content {
     border-top: 1px solid #777;
+    border-width: 1px 0 0 0 !important;
   }
 }
